--- a/lang/it.json
+++ b/lang/it.json
@@ -12,6 +12,7 @@
     "warning": "Attenzione",
     "close": "Chiudi",
     "save": "Salva",
+    "cancel": "Cancella",
     "apply": "Applica",
     "yes": "Sì",
     "no": "No",
@@ -23,6 +24,7 @@
     "browse": "Sfoglia...",
     "search": "Cerca...",
     "filter": "Filtra",
+    "reset_filters": "Azzera Filtri",
     "db_config_failed": "Impossibile configurare il database",
     "db_not_initialized": "Database non inizializzato",
     "db_created": "Database creato con successo!",
@@ -34,11 +36,25 @@
     "confirm_empty_database": "Sei sicuro di voler svuotare il database? Tutti i film verranno eliminati in modo permanente.",
     "database_emptied": "Il database è stato svuotato con successo",
     "error_emptying_database": "Errore durante lo svuotamento del database",
+    "error_loading_settings": "Error loading settings",
+    "error_saving_settings": "Error saving settings",
+    "emptying_database": "Emptying database...",
+    "database_emptied_successfully": "Database emptied successfully",
+    "operation_timed_out": "Operation timed out. The database might be busy. Please try again.",
+    "operation_failed_after_retries": "Operation failed after several attempts",
+    "connection_error": "Database connection error",
+    "connection_timeout": "Database connection timeout",
+    "reconnecting": "Reconnecting...",
     "ready": "Pronto",
     "loading": "Caricamento in corso...",
     "processing": "Elaborazione...",
     "please_wait": "Attendere prego...",
     "done": "Fatto!",
+    "success": "Success!",
+    "failed": "Failed",
+    "scanning": "Scanning...",
+    "scan_complete": "Scan Complete",
+    "settings_saved_message": "Settings saved successfully",
     "search_button": "Cerca",
     "clear_filters": "Rimuovi Filtri",
     "no_results": "Nessun risultato trovato",
@@ -61,6 +77,15 @@
     "invalid_file": "File non valido",
     "file_too_large": "File troppo grande",
     "unsupported_format": "Formato file non supportato",
+    "never_checked": "Mai Controllato",
+    "last_checked": "Ultimo Controllo",
+    "check_now": "Controlla",
+    "check_updates_startup": "Controlla aggiornamenti all'avvio",
+    "update_channel": "Canale di Aggiornamento",
+    "stable": "Stable",
+    "beta": "Beta",
+    "development": "Development",
+    "update_settings": "Impostazioni Aggiornamento",
     "import_csv": "Importa da CSV",
     "export_to_csv": "Esporta in CSV",
     "import_success": "Importazione Completata",
@@ -68,11 +93,14 @@
     "import_error": "Errore di Importazione",
     "export_error": "Errore di Esportazione",
     "log_viewer": "Visualizzatore Log",
+    "logging": "Log",
     "log_level": "Livello Log",
     "log_location": "Posizione Log",
     "clear_logs": "Pulisci Log",
     "logs_cleared": "I log sono stati cancellati",
     "confirm_clear_logs": "Sei sicuro di voler cancellare tutti i file di log?",
+    "select_log_directory": "Select Log Directory",
+    "settings_saved": "Settings saved successfully",
     "check_updates": "Controlla Aggiornamenti",
     "update_available": "Aggiornamento Disponibile",
     "up_to_date": "L'applicazione è aggiornata",
@@ -81,6 +109,172 @@
     "documentation": "Documentazione",
     "about": "Informazioni",
     "version": "Versione",
+    "failed_to_add_movie": "Failed to add movie to database.",
+    "add_new_movie": "Add New Movie",
+    "save_changes": "Save Changes",
+    "cancel_changes": "Cancel Changes",
+    "movie_saved": "Movie saved successfully",
+    "error_saving_movie": "Error saving movie",
+    "invalid_year": "Invalid year",
+    "invalid_rating": "Invalid rating (0-10)",
+    "invalid_duration": "Invalid duration",
+    "required_field": "This field is required",
+    "confirm": "Confirm",
+    "information": "Information",
+    "question": "Question",
+    "error_occurred": "An error occurred",
+    "operation_completed": "Operation completed",
+    "operation_failed": "Operation failed",
+    "previous": "Previous",
+    "next": "Next",
+    "first": "First",
+    "last": "Last",
+    "page": "Page",
+    "of": "of",
+    "sort_by": "Sort by",
+    "sort_field": "Field",
+    "sort_field_title": "Title",
+    "sort_field_movie_name": "Movie Name",
+    "sort_field_genre": "Genre",
+    "sort_field_year": "Year",
+    "sort_field_rating": "Rating",
+    "sort_field_runtime": "Runtime",
+    "sort_field_id": "ID",
+    "sort_field_path": "Path",
+    "sort_asc": "Ascending",
+    "sort_desc": "Descending",
+    "open": "Open",
+    "rename": "Rename",
+    "properties": "Properties",
+    "help_tooltip": "Get help",
+    "settings_tooltip": "Open settings",
+    "about_tooltip": "About this application",
+    "exit_tooltip": "Exit the application",
+    "date_format": "%Y-%m-%d",
+    "time_format": "%H:%M:%S",
+    "datetime_format": "%Y-%m-%d %H:%M:%S",
+    "thousands_separator": ",",
+    "decimal_separator": ".",
+    "ok": "OK",
+    "load": "Load",
+    "view": "View",
+    "settings": "Settings",
+    "preferences": "Preferences",
+    "file": "File",
+    "edit_menu": "Edit",
+    "view_menu": "View",
+    "language": "Language",
+    "theme": "Theme",
+    "appearance": "Appearance",
+    "behavior": "Behavior",
+    "general": "General",
+    "advanced": "Advanced",
+    "reset": "Reset",
+    "discard": "Discard",
+    "confirm_discard": "Discard changes?",
+    "confirm_discard_message": "Are you sure you want to discard your changes?",
+    "error_occurred_title": "Error Occurred",
+    "warning_title": "Warning",
+    "info_title": "Information",
+    "success_title": "Success",
+    "question_title": "Question",
+    "input_required": "Input required",
+    "invalid_input": "Invalid input",
+    "operation_in_progress": "Operation in progress...",
+    "please_wait_processing": "Please wait while processing...",
+    "operation_completed_successfully": "Operation completed successfully",
+    "operation_failed_try_again": "Operation failed. Please try again.",
+    "no_internet_connection": "No internet connection",
+    "connection_timed_out": "Connection timed out",
+    "server_unreachable": "Server unreachable",
+    "permission_denied": "Permission denied",
+    "resource_not_found": "Resource not found",
+    "internal_server_error": "Internal server error",
+    "service_unavailable": "Service unavailable",
+    "bad_gateway": "Bad gateway",
+    "gateway_timeout": "Gateway timeout",
+    "not_implemented": "Not implemented",
+    "bad_request": "Bad request",
+    "unauthorized": "Unauthorized",
+    "forbidden": "Forbidden",
+    "not_found": "Not found",
+    "method_not_allowed": "Method not allowed",
+    "not_acceptable": "Not acceptable",
+    "conflict": "Conflict",
+    "gone": "Gone",
+    "precondition_failed": "Precondition failed",
+    "unsupported_media_type": "Unsupported media type",
+    "too_many_requests": "Too many requests",
+    "internal_error": "Internal error",
+    "not_implemented_error": "Not implemented error",
+    "bad_gateway_error": "Bad gateway error",
+    "service_unavailable_error": "Service unavailable error",
+    "gateway_timeout_error": "Gateway timeout error",
+    "version_not_supported": "Version not supported",
+    "variant_also_negotiates": "Variant also negotiates",
+    "insufficient_storage": "Insufficient storage",
+    "loop_detected": "Loop detected",
+    "not_extended": "Not extended",
+    "network_authentication_required": "Network authentication required",
+    "font_size": "Font Size",
+    "movies_loaded": "Movies loaded from database",
+    "load_movies_failed": "Failed to load movies",
+    "select_directory": "Select Movie Directory",
+    "actions": "Actions",
+    "scan_the_movies": "Scan Movies",
+    "load_db": "Load from DB",
+    "path": "Path",
+    "new_database": "New Database",
+    "open_database": "Open Database",
+    "close_database": "Close Database",
+    "language_menu": "Language",
+    "sponsor_menu": "Sponsor",
+    "data_exported": "Data exported to",
+    "export_failed": "Failed to export data",
+    "export_success_message": "Successfully exported {count} movies to {filename}",
+    "export_error_message": "Failed to export movies to CSV",
+    "no_movies_to_export": "No movies found to export.",
+    "import_csv_title": "Select CSV File to Import",
+    "importing": "Importing Movies",
+    "importing_file": "Importing movies from: {filename}",
+    "import_success_message": "Successfully imported {count} movies",
+    "import_error_message": "Failed to import movies from CSV",
+    "save_as_csv": "Save as CSV",
+    "sponsor": "Sponsor Us",
+    "sponsor_on_github": "Sponsor on GitHub",
+    "join_discord": "Join Discord",
+    "buy_me_a_coffee": "Buy Me a Coffee",
+    "join_the_patreon": "Join The Patreon",
+    "Support": "Support",
+    "Documentation": "Documentation",
+    "Usage": "Usage",
+    "Help": "Help",
+    "movie_catalog_help": "Movie Catalog Help",
+    "basic_usage": "Basic Usage",
+    "click_browse": "Click \"Browse\" to select your movie directory",
+    "click_scan": "Click \"Scan Movies\" to start scanning",
+    "progress_shown": "Progress will be shown in the progress bar",
+    "movies_displayed": "Movies will be displayed in the tree view",
+    "database_features": "Database Features",
+    "auto_save_db": "Movies are automatically saved to MySQL database",
+    "load_from_db": "Click \"Load from Database\" to view stored movies",
+    "export_csv": "Use \"Export to CSV\" to save movies to a CSV file",
+    "db_config": "Database configuration can be modified in MySQLConfig",
+    "file_organization": "File Organization",
+    "genre_directories": "Movies should be organized in genre directories",
+    "supported_formats": "Supported formats: .mp4, .mkv, .avi, .mov, .webm, .mpg, .mpeg, .wmv, .flv, .m4v, .vob, .divx",
+    "genre_extraction": "Genre is extracted from directory names",
+    "name_extraction": "Movie name is extracted from filenames",
+    "status_updates": "Status updates are displayed in the status bar",
+    "additional_features": "Additional Features",
+    "help_dialog": "Help dialog provides detailed usage information",
+    "about_dialog": "About dialog shows application information",
+    "sponsor_options": "Sponsorship options available",
+    "error_handling": "Improved error handling and user feedback",
+    "documentation_links": "Documentation Links",
+    "github_repo": "GitHub Repository",
+    "project_docs": "Project Documentation",
+    "issue_tracker": "Issue Tracker",
     "user_guide": "Guida Utente",
     "report_issues": "Segnala Problemi",
     "support": "Supporto",
@@ -144,7 +338,7 @@
     "theme": "Tema",
     "language": "Lingua",
     "id": "ID",
-    "genres": "Generi",
+    "genres": "Genere",
     "title": "Titolo",
     "path": "Percorso",
     "import": "Importa",
